Fix experience tabs overflowing their fixed-width column

--- a/src/components/home/Experience/experience.scss
+++ b/src/components/home/Experience/experience.scss
@@ -10,7 +10,8 @@
 
     ul {
         display: block;
-        width: 114.33px;
+        width: max-content;
+        min-width: 114.33px;
         border: none;
     }
 
